--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-debounce-input": "^3.3.0",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
